correct nav bar so menu collapse trigger button is aligned with the other icons

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+.ant-layout {
+  background-color: white !important;
+}
